feat(rewrite): added root endpoint
